--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "firebase": "^5.4.2",
     "react": "^16.4.2",
+    "react-bs-notifier": "^5.0.0",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
